--- a/packages/theme/src/mixins/config.scss
+++ b/packages/theme/src/mixins/config.scss
@@ -1,4 +1,4 @@
-$namespace: 'ex' !default;
+$namespace: 'wl' !default;
 $common-separator: '-' !default;
 $element-separator: '__' !default;
 $modifier-separator: '--' !default;
